# LegacySDK

./: .gitignore  CHANELOG.md  README.md  sdk.bat
.github/: FUNDING.yml
.github/workflows/: build.yml
XInput/: CMakeLists.txt
XInput/src/: proxy.cpp  proxy.rc
docs/: COMPILE.md  SDK.md  TODO.md
loader/: CMakeLists.txt  build.bat  mingw-w64-x86_64.cmake
loader/include_fix/: Windows.h
loader/launcher/src/: proxy.rc  updater.cpp
loader/src/: dllmain.cpp  modloader.cpp  terminal.cpp
loader/src/crashlog/: crashlog.cpp  crashmanager.cpp
loader/src/include/: crashlog.hpp  crashmanager.hpp  modloader.hpp  terminal.hpp
loader/src/include/loader/: UI.hpp  init.hpp
loader/src/loader/: UI.cpp
loader/src/sdk/enums/: Enums.hpp
loader/src/sdk/enums/UIController/: UIController.hpp  init.hpp
loader/src/sdk/enums/interface/UIController/: UIControllerInterface.hpp
loader/src/sdk/include/: input.hpp  log.hpp  mod.hpp
loader/src/sdk/include/legacysdk/: legacysdk.hpp
loader/src/sdk/include/legacysdk/memory/: bindings.hpp
loader/src/sdk/include/legacysdk/ui/: hooks.hpp  mainmenu.hpp  messagebox.hpp  strings.hpp
loader/src/sdk/main/: log.cpp
loader/src/sdk/main/ui/: hooks.cpp  mainmenu.cpp  uicontroller.cpp
mods/example/: CMakeLists.txt
mods/example/src/: main.cpp
mods/noautosavething/: CMakeLists.txt
mods/noautosavething/src/: main.cpp
sdk/enums/UIController/: UIController.hpp
sdk/enums/interface/UIController/: UIControllerInterface.hpp
sdk/include/: mod.hpp
sdk/src/: input.cpp  mod.cpp
sdk/src/ui/: uicontroller.cpp
